--- a/WpfWerewolf/packages.config
+++ b/WpfWerewolf/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="5.1.1" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net472" />
   <package id="Microsoft.CodeCoverage" version="17.9.0" targetFramework="net472" />
   <package id="Microsoft.NET.Test.Sdk" version="17.9.0" targetFramework="net472" />
@@ -9,9 +10,11 @@
   <package id="Microsoft.Testing.Platform" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Testing.Platform.MSBuild" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.5.0" targetFramework="net472" />
+  <package id="Moq" version="4.20.70" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="3.3.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="3.3.1" targetFramework="net472" />
   <package id="NuGet.Frameworks" version="5.11.3" targetFramework="net472" />
+  <package id="OpenCover" version="4.7.1221" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
@@ -19,4 +22,5 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
